Version 9.1 - xxx edition. 21 August 2020

Added compile setting to disable networking functions
Added pc speaker audio driver (for Linux only)
Added date & time field info to ZSF snapshots
Added F-key function to show windows in background without having to open the menu
Added configuration & command line setting to save keymap type
Added SNA to SCR file converter

Improved ZX Desktop: 
-Added direct buttons, to access menu items
-Added devices buttons/icons, to show device activity and device configuration
-Reordered menu items
-Windows are not closed when changing ZX Desktop size
-Added new ZX Desktop fill types: RainbowAlive, Chess, Grid, Random
-Improved input number windows: added buttons to increase/decrease values

Improved loading .pok files: increased maximum pokes from 100 to 49152 pokes
Improved 1 bit resample audio filter 
Improved ZRCP: Added MMU information to cpu-history command

Improved TBBlue emulation:
-Added emulation of tbblue joystick type (register 5)
-Added sprite zoom emulation
-Added relative sprites emulation
-Added sprite clipping emulation

Improved File Browser: added previews for screens (on .scr, .tap, .tzx, .pzx, .trd, .dsk, .sna)

Fixed reading keys on SDL and X11 drivers with default keymap and machines QL, MSX and Spectravideo
Fixed restoring machine to msx, coleco, sg1000 and svi
Fixed showing last core frame time in Core Statistics window

Fixed QL bugs:
-Fixed loading QL Superbasic programs when line lenght usually longer than 128 bytes
-Fixed using QL system calls and A6 pointer offset used after previous Trap was not 4
-Fixed system call FS.HEADR
-Fixed system call IO.FSTRG
-Fixed possible hang calling IO.SSTRG
-Fixed cursor flashing


Fixed segfaults when changing machines and having ZX Desktop windows opened
Fixed easter egg and cyrillic characters
Fixed segfaults when initializing audio and video drivers
Fixed rendering ZX Desktop on startup
Fixed arranging ZX Vision windows when changing machine or disabling border