@@ -731,6 +731,10 @@ extern void util_convert_scr_sprite(z80_byte *origen,z80_byte *destino);
 
 extern int util_convert_sna_to_scr(char *filename,char *archivo_destino);
 
+extern int util_convert_sp_to_scr(char *filename,char *archivo_destino);
+
+extern int util_convert_z80_to_scr(char *filename,char *archivo_destino);
+
 extern int util_get_absolute(int valor);
 
 extern int util_get_sign(int valor);
